--- a/INST326_Project02.ipynb
+++ b/INST326_Project02.ipynb
@@ -139,6 +139,15 @@
     "# the class may contain additional methods to perform tasks like calculating the metadata, for example\n",
     "# the submit method calls the MakeNote class that transforms the the entered data into a new note object.\n",
     "\n",
+    "\n",
+    "class Snippet(tk.Toplevel):
+    "     def __init__(self):\n"
+    "        super().__init__(master) # initialize it as a toplevel window\n",
+    "        self.geometry(\"600x400\") # set the default window size\n",
+    "        self.title('Note Form') #set the new window title\n",
+    "        
+    "\n",
+    "\n",
     "class NoteForm(tk.Toplevel):\n",
     "    \n",
     "    def __init__(self, master, notebook, notes): # initialize the new object\n",
