--- a/INST326_Project02.ipynb
+++ b/INST326_Project02.ipynb
@@ -145,7 +145,15 @@
     "        super().__init__(master) # initialize it as a toplevel window\n",
     "        self.geometry(\"600x400\") # set the default window size\n",
     "        self.title('Note Form') #set the new window title\n",
-    "        
+    "\n",        
+    "        titel_label = tk.Label(self, bg='light gray', text='Snippet Title:')\n",
+    "        title_label.grid(padx=10, pady=10, row=1, column=0, sticky='e')\n",
+    "        \n",
+    "        snippet_text = tk.Label(self, bg='light gray', text='Snippet Text:')\n",
+    "        text_label.grid(padx=10, pady=10, row=2, column=0, sticky='e')\n",
+    "        \n",
+    "        link_label = tk.Label(self, bg='light gray', text='Snippet Title:')\n",
+    "        link_label.grid(padx=10, pady=10, row=3, column=0, sticky='e')\n",
     "\n",
     "\n",
     "class NoteForm(tk.Toplevel):\n",
