--- a/INST326_Project02.ipynb
+++ b/INST326_Project02.ipynb
@@ -146,14 +146,21 @@
     "        self.geometry(\"600x400\") # set the default window size\n",
     "        self.title('Note Form') #set the new window title\n",
     "\n",        
-    "        titel_label = tk.Label(self, bg='light gray', text='Snippet Title:')\n",
+    "        title_label = tk.Label(self, bg='light gray', text='Snippet Title:')\n",
     "        title_label.grid(padx=10, pady=10, row=1, column=0, sticky='e')\n",
     "        \n",
     "        snippet_text = tk.Label(self, bg='light gray', text='Snippet Text:')\n",
     "        text_label.grid(padx=10, pady=10, row=2, column=0, sticky='e')\n",
     "        \n",
-    "        link_label = tk.Label(self, bg='light gray', text='Snippet Title:')\n",
-    "        link_label.grid(padx=10, pady=10, row=3, column=0, sticky='e')\n",
+    "        # create snippet title entry field\n",
+    "        snippet_title = tk.Entry(self, width=80)\n",
+    "        snippet_title.grid(padx=10, pady=10, row=1, column=1, sticky='w')\n",
+    "        snippet_title.insert(0, 'New snippet title') \n",
+    "        \n",
+    "        # create note text field\n",
+    "        snippet_text = tk.Text(self, height=10, width=60)\n",
+    "        snippet_text.grid(padx=10, pady=10, row=2, column=1)\n",
+    "\n",
     "\n",
     "\n",
     "class NoteForm(tk.Toplevel):\n",
