--- a/INST326_Project02.ipynb
+++ b/INST326_Project02.ipynb
@@ -140,7 +140,7 @@
     "# the submit method calls the MakeNote class that transforms the the entered data into a new note object.\n",
     "\n",
     "\n",
-    "class Snippet(tk.Toplevel):
+    "class Snippet(tk.Toplevel):"
     "     def __init__(self):\n"
     "        super().__init__(master) # initialize it as a toplevel window\n",
     "        self.geometry(\"600x400\") # set the default window size\n",
@@ -161,7 +161,34 @@
     "        snippet_text = tk.Text(self, height=10, width=60)\n",
     "        snippet_text.grid(padx=10, pady=10, row=2, column=1)\n",
     "\n",
+"\n",
+    "    def submit(self):\n",
+    "        tags = self.tags_entry.get().split(',')\n",
+    "        snippet = CodeSnippet(\n",
+    "            title=self.title_entry.get(),\n",
+    "            code=self.code_text.get(\"1.0\", \"end-1c\"),\n",
+    "            description=self.description_entry.get(),\n",
+    "            tags=tags\n",
+    "        )\n",
+    "        self.snippets.append(snippet)\n",
+    "        self.master.display_snippets()  # Display updated list of snippets\n",
+    "        self.destroy()\n",
     "\n",
+    "class MakeNote:\n",
+    "    def __init__(self, title, text, link, tags, date_created):\n",
+    "        self.title = title\n",
+    "        self.text = text\n",
+    "        self.link = link\n",
+    "        self.tags = tags\n",
+    "        self.date_created = date_created\n",
+    "\n",
+    "class CodeSnippet:\n",
+    "    def __init__(self, title, code, description=\"\", tags=None, date_created=None):\n",
+    "        self.title = title\n",
+    "        self.code = code\n",
+    "        self.description = description\n",
+    "        self.tags = tags if tags else []\n",
+    "        self.date_created = date_created if date_created else datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "\n",
     "class NoteForm(tk.Toplevel):\n",
     "    \n",
