--- a/INST326_Project02.ipynb
+++ b/INST326_Project02.ipynb
@@ -161,7 +161,10 @@
     "        snippet_text = tk.Text(self, height=10, width=60)\n",
     "        snippet_text.grid(padx=10, pady=10, row=2, column=1)\n",
     "\n",
-"\n",
+    "    #def create(self):\n",
+    "\n" 
+    "    #def 
+    "\n",
     "    def submit(self):\n",
     "        tags = self.tags_entry.get().split(',')\n",
     "        snippet = CodeSnippet(\n",
